examples/invalid/bad-finite-domain.diagnostics
error: rule `invalid_guard_literal` compares finite-domain value to unknown `pi`
   --> examples/invalid/bad-finite-domain.whip:16:4
   |
16 | => {
   |    ^
   = help: use one of: codex, claude
error: rule `invalid_enum_variant` compares finite-domain value to unknown `Missing`
   --> examples/invalid/bad-finite-domain.whip:21:4
   |
21 | => {
   |    ^
   = help: use one of: Accept, Revise
error: rule `invalid_membership_literal` compares finite-domain value to unknown `bad`
   --> examples/invalid/bad-finite-domain.whip:26:4
   |
26 | => {
   |    ^
   = help: use one of: codex, claude
error: rule `implicit_query_invalid_variant` compares finite-domain value to unknown `Missing`
   --> examples/invalid/bad-finite-domain.whip:31:4
   |
31 | => {
   |    ^
   = help: use one of: Accept, Revise
error: rule `impossible_domain_equality` has statically unsatisfiable finite-domain equality
   --> examples/invalid/bad-finite-domain.whip:36:4
   |
36 | => {
   |    ^
   = help: compare domains with at least one shared value; left: codex, claude, right: pi, coerce
error: rule `impossible_domain_membership` has statically unsatisfiable finite-domain exclusion
   --> examples/invalid/bad-finite-domain.whip:41:4
   |
41 | => {
   |    ^
   = help: leave at least one domain value outside the exclusion set
